app/assets/stylesheets/application.tailwind.css
@import "./table-list.tailwind.css";
@import "./tabs.tailwind.css";
@import "./dropdown.tailwind.css";
@import "./sidebar.tailwind.css";
@import "./content.tailwind.css";
@import "./form.tailwind.css";
@import "./automation.tailwind.css";
@import "./modal.tailwind.css";
@import "./lozenges.tailwind.css";
@import "./reactions.tailwind.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    body {
        @apply content-container;
        @apply md:bg-gray-100;
        @apply dark:md:bg-gray-900;
        @apply antialiased;
    }

    label {
        @apply dark:text-white;
    }

    button:disabled,
    input:disabled {
        @apply cursor-not-allowed;
    }
}

@layer components {
    .top-nav-bar {
        @apply bg-white border-gray-200;
        @apply dark:border-gray-500 dark:bg-gray-700;
        @apply border-b-2 px-2 py-2.5;
    }

    .button {
        @apply px-6 py-2 leading-5 rounded-md font-semibold inline-flex items-center text-sm ;
    }

    .focused-section {
        @apply form-section;
        @apply relative overflow-x-auto;
    }

    .secondary-button {
        @apply button;
        @apply bg-white text-gray-900 hover:bg-gray-100 active:bg-gray-200;
        @apply dark:bg-gray-700 dark:text-gray-100 dark:hover:bg-gray-600 dark:hover:bg-gray-600;
        @apply shadow-sm ring-1 ring-inset ring-gray-300;
        @apply dark:ring-0;
    }

    .danger-button {
        @apply bg-red-600 text-white hover:bg-red-500;
    }

    button:disabled:not(.link-button):not(.ignore-default-disabled-styling),
    input:disabled,
    .disabled-button {
        @apply bg-slate-950/5 text-slate-950/40;
        @apply focus-visible:outline-none;
    }

    .first-button-group {
        @apply relative inline-flex items-center rounded-l-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-10;
    }

    .primary-button,
    .create-button {
        @apply secondary-button;
        @apply bg-orange-400 text-slate-900 hover:bg-orange-300 hover:text-slate-800;
        @apply dark:bg-orange-300 dark:text-slate-100 dark:hover:bg-orange-400 dark:hover:text-slate-200;
    }

    button:disabled:not(.link-button).primary-button,
    input:disabled.primary-button {
        @apply bg-orange-400/40 text-slate-950/40;
    }

    .link-button {
        @apply font-medium text-blue-600 dark:text-blue-500;
    }

    .link-button:not(:disabled) {
        @apply hover:underline
    }

    .link-button:disabled {
        @apply text-neutral-400;
    }
}

